@@ -19,7 +19,7 @@
 package co.elastic.apm.agent.lettuce;
 
 import co.elastic.apm.agent.bci.TracerAwareInstrumentation;
-import co.elastic.apm.agent.collections.WeakConcurrentSupplierImpl;
+import co.elastic.apm.agent.collections.WeakConcurrentProviderImpl;
 import co.elastic.apm.agent.impl.transaction.Span;
 import co.elastic.apm.agent.redis.RedisSpanUtils;
 import co.elastic.apm.agent.sdk.weakconcurrent.WeakMap;
@@ -46,7 +46,7 @@ import static net.bytebuddy.matcher.ElementMatchers.takesArguments;
  */
 public class Lettuce5StartSpanInstrumentation extends TracerAwareInstrumentation {
 
-    static final WeakMap<RedisCommand<?, ?, ?>, Span> commandToSpan = WeakConcurrentSupplierImpl.createWeakSpanMap();
+    static final WeakMap<RedisCommand<?, ?, ?>, Span> commandToSpan = WeakConcurrentProviderImpl.createWeakSpanMap();
 
     @Override
     public ElementMatcher<? super TypeDescription> getTypeMatcher() {
